# HELIXFORGE

./: .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  BUILD_SPEC.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISION_LOG.md  Dockerfile  GEMINI.md  NEXT_ACTION.md  PROJECT_STATE.json  README.md  REVIEW.md  VISION.md  clippy.toml  constitution.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  installer.yml
apps/console/: next.config.ts  package.json
crates/agent-framework/: Cargo.toml
crates/agent-framework/src/: lib.rs
crates/audit-log/: Cargo.toml
crates/audit-log/src/: lib.rs
crates/auth-client/: Cargo.toml
crates/auth-client/src/: lib.rs
crates/billing-client/: Cargo.toml
crates/billing-client/src/: lib.rs
crates/helix-db/: Cargo.toml
crates/helix-db/migrations/: 0001_core_audit_meter.sql  0002_collab.sql  0003_code_flow.sql  0004_insights.sql  0005_commerce.sql  0006_edu.sql  0007_capital.sql  0008_well.sql  0009_network.sql  0010_products_10_20.sql  0011_vault.sql  0012_agent_runs.sql  0013_vault_objects_billing.sql  0014_payments.sql  0015_enterprise_core.sql  0016_core_governance.sql  0017_meter_idempotency.sql  0018_sovereign_rate_audit.sql  0019_collab_workspace_depth.sql  0020_collab_deeper.sql  0021_collab_client_e2ee.sql  0022_collab_sovereign.sql  0023_collab_full_depth.sql  0024_code_extreme.sql  0025_code_e2_runners.sql  0026_code_e4_agents.sql  0027_code_e5_sealed.sql  0028_code_openmls_docker.sql  0029_code_endstate.sql  0030_code_residuals.sql  0031_code_limits_ha.sql  0032_flow_depth.sql  0034_vault_key_version.sql  0035_audit_archive.sql  0036_foundation_integrity_identity.down.sql  0036_foundation_integrity_identity.sql  0037_atomic_jobs_readiness.down.sql  0037_atomic_jobs_readiness.sql  0038_recovery_bin_governance.down.sql  0038_recovery_bin_governance.sql  (+50 more)
crates/helix-db/src/: acl.rs  agents.rs  api_keys.rs  atomic.rs  audit_archive.rs  audit_pg.rs  capital.rs  climate.rs  code.rs  code_endstate.rs  code_residuals.rs  collab.rs  collab_sovereign.rs  commerce.rs  cura.rs  edu.rs  flow.rs  governance.rs  grid.rs  insights.rs  jobs.rs  lex.rs  lib.rs  membership.rs  meter_pg.rs  network.rs  nova.rs  orbit.rs  outbox.rs  payments.rs  plans_pg.rs  pool.rs  pulse.rs  quantum.rs  regions.rs  studio.rs  synthbio.rs  synthbio_genbank.rs  synthbio_registry.rs  tenants.rs  (+6 more)
crates/job-engine/: Cargo.toml
crates/job-engine/src/: lib.rs
crates/nats-client/: Cargo.toml
crates/nats-client/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/service-kit/: Cargo.toml
crates/service-kit/src/: context.rs  error_map.rs  health.rs  lib.rs  middleware.rs  outbox_relay.rs  product.rs
crates/shared-core/: Cargo.toml
crates/shared-core/src/: config.rs  error.rs  hash.rs  ids.rs  lib.rs  pagination.rs  project.rs  response.rs  semantic_state.rs  tenancy.rs  time.rs
crates/vault-client/: Cargo.toml
crates/vault-client/src/: crypto.rs  kms.rs  lib.rs  minio.rs
deploy/docker/: entrypoint.sh
deploy/local/: init-db.sql  prometheus.yml  restore.override.yml
docs/: SECOND_WAVE.md
docs/adr/: 0001-monorepo-rust-first.md  0002-sovereign-auth-ory.md  (+9 more)
projects/helix-code/backend/: Cargo.toml
projects/helix-code/backend/src/: main.rs
projects/helix-code/backend/src/domain/: agent_sandbox.rs  api.rs  branch_protection.rs  breakglass.rs  cmd_policy.rs  collab_api.rs  container.rs  dap_client.rs  endstate_api.rs  git_store.rs  lsp_api.rs  lsp_bridge.rs  mls_api.rs  mls_engine.rs  mod.rs  sandbox.rs  sealed_api.rs  smart_http.rs  tenant_policy.rs  terminal_policy.rs  webhook_policy.rs
projects/helix-collab/backend/: Cargo.toml
projects/helix-collab/backend/src/: main.rs
projects/helix-collab/backend/src/domain/: crdt.rs  crypto_doc.rs  documents.rs  mls_api.rs  mls_engine.rs  mod.rs  policy.rs  realtime.rs  sovereign.rs  webauthn_api.rs  workspace_api.rs
projects/helix-edu/backend/: Cargo.toml
projects/helix-edu/backend/src/: main.rs
projects/helix-forge-studio/backend/: Cargo.toml
projects/helix-forge-studio/backend/src/: main.rs
projects/helix-insights/backend/: Cargo.toml
projects/helix-insights/backend/src/: main.rs
projects/helix-synthbio/backend/: Cargo.toml
projects/helix-synthbio/backend/src/: main.rs  registry.rs
projects/helix-well/backend/: Cargo.toml
projects/helix-well/backend/src/: main.rs
scripts/: backup_helixcore.ps1  ci-build.ps1  ci-build.sh  ci-test.ps1  ci-test.sh  continuous_backup.ps1  dev-core.cmd  dev-core.ps1  dev-products.ps1  enable_minio_versioning.ps1  helix_capital_durability.ps1  helix_capital_smoke.ps1  helix_climate_prime_durability.ps1  helix_climate_prime_smoke.ps1  helix_code_dap_smoke.py  helix_code_durability.ps1  helix_code_endstate_smoke.ps1  helix_code_make_icon.ps1  helix_code_org_codesign.ps1  helix_code_publish_update.ps1  helix_code_smoke.ps1  helix_collab_durability.ps1  helix_collab_smoke.ps1  helix_commerce_durability.ps1  helix_commerce_smoke.ps1  helix_cura_prime_durability.ps1  helix_cura_prime_smoke.ps1  helix_edu_durability.ps1  helix_edu_smoke.ps1  helix_flow_durability.ps1  helix_flow_smoke.ps1  helix_forge_studio_durability.ps1  helix_forge_studio_smoke.ps1  helix_grid_prime_durability.ps1  helix_grid_prime_smoke.ps1  helix_insights_durability.ps1  helix_insights_smoke.ps1  helix_lex_prime_durability.ps1  helix_lex_prime_smoke.ps1  helix_network_durability.ps1  (+36 more)
services/agent-hub/: Cargo.toml
services/agent-hub/src/: main.rs
services/auth-adapter/: Cargo.toml
services/auth-adapter/src/: main.rs
services/billing-service/: Cargo.toml
services/billing-service/src/: main.rs
services/gateway/: Cargo.toml
services/gateway/src/: main.rs
services/observability-service/: Cargo.toml
services/observability-service/src/: main.rs
services/vault-service/: Cargo.toml
services/vault-service/src/: main.rs
tools/quality/release-gate/: Cargo.toml
tools/quality/release-gate/src/: main.rs
(+371 files in other folders)
