[package]
name = "agent_framework"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent runtime framework shared by HelixForge products"

[dependencies]
shared_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
