[package]
name = "auth_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ory Kratos/Hydra auth client for HelixForge"

[dependencies]
shared_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
jsonwebtoken = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
