[package]
name = "billing_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Usage metering and billing client for HelixForge"

[dependencies]
shared_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
