[package]
name = "job_engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Durable job engine with lease, heartbeat, checkpoint, cancel, and recovery"

[dependencies]
helix_db = { workspace = true }
shared_core = { workspace = true }
audit_log = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
