[package]
name = "nats_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "NATS JetStream client wrapper for HelixForge"

[dependencies]
shared_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }


[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
