[package]
name = "observability"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Tracing, metrics, OTEL/HTTP export, and health helpers for HelixForge"

[dependencies]
shared_core = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
getrandom = { workspace = true }
