[package]
name = "vault_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Vault client for envelope-encrypted secrets"

[dependencies]
shared_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
aes-gcm = { workspace = true }
getrandom = { workspace = true }
hmac = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
