[package]
name = "agent_hub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HelixCore agent orchestration hub"

[[bin]]
name = "agent_hub"
path = "src/main.rs"

[dependencies]
service_kit = { workspace = true }
shared_core = { workspace = true }
agent_framework = { workspace = true }
audit_log = { workspace = true }
helix_db = { workspace = true }
job_engine = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
