[package]
name = "auth_adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HelixCore Ory Kratos/Hydra adapter"

[[bin]]
name = "auth_adapter"
path = "src/main.rs"

[dependencies]
service_kit = { workspace = true }
shared_core = { workspace = true }
auth_client = { workspace = true }
audit_log = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
