[package]
name = "billing_service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HelixCore billing & metering service"

[[bin]]
name = "billing_service"
path = "src/main.rs"

[dependencies]
service_kit = { workspace = true }
shared_core = { workspace = true }
billing_client = { workspace = true }
helix_db = { workspace = true }
audit_log = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
