[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HelixCore API gateway"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
service_kit = { workspace = true }
shared_core = { workspace = true }
auth_client = { workspace = true }
billing_client = { workspace = true }
helix_db = { workspace = true }
audit_log = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
http = { workspace = true }
