[package]
name = "observability_service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HelixCore observability & audit sink service"

[[bin]]
name = "observability_service"
path = "src/main.rs"

[dependencies]
service_kit = { workspace = true }
shared_core = { workspace = true }
audit_log = { workspace = true }
helix_db = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
subtle = { workspace = true }
