[package]
name = "vault_service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HelixCore vault service"

[[bin]]
name = "vault_service"
path = "src/main.rs"

[dependencies]
service_kit = { workspace = true }
shared_core = { workspace = true }
vault_client = { workspace = true }
helix_db = { workspace = true }
audit_log = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
