[package]
name = "helix_code_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HelixCode API — sovereign code forge (extreme)"

[[bin]]
name = "helix_code_api"
path = "src/main.rs"

[dependencies]
service_kit = { workspace = true }
shared_core = { workspace = true }
agent_framework = { workspace = true }
helix_db = { workspace = true }
audit_log = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
gix = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
vault_client = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
openmls = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_basic_credential = { workspace = true }
openmls_memory_storage = { workspace = true }
openmls_traits = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
