[package]
name = "helix_well_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "HelixWell API — AI personal and team wellness platform"

[[bin]]
name = "helix_well_api"
path = "src/main.rs"

[dependencies]
service_kit = { workspace = true }
shared_core = { workspace = true }
agent_framework = { workspace = true }
helix_db = { workspace = true }
audit_log = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
