[package]
name = "release-gate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Fresh release gate runner with signed evidence"

[[bin]]
name = "release-gate"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
